--- a/cases/bomex/bomex.ini
+++ b/cases/bomex/bomex.ini
@@ -3,8 +3,8 @@ npx=1
 npy=1
 
 [grid]
-itot=64
-jtot=64
+itot=32
+jtot=32
 ktot=64
 
 xsize=6400.
@@ -53,6 +53,8 @@ swboundary=surface
 z0m=0.1
 z0h=0.1
 ustar=0.28
+swopenbc=1
+openbc_list=thl
 
 [fields]
 visc=1.e-5
@@ -106,7 +108,7 @@ dumplist=u,v,w,qt,ql,thl
 
 [cross]
 swcross=1
-crosslist=qt,ql
+crosslist=thl,qt,ql
 sampletime=1800
 xz=0
 xy=5
